--- a/pom.xml
+++ b/pom.xml
@@ -51,6 +51,12 @@
     </license>
   </licenses>
   <!-- Dependencies -->
+  <repositories>
+    <repository>
+      <id>atisot_maven</id>
+      <url>file://${project.basedir}/../Maven</url>
+    </repository>
+  </repositories>
   <dependencies>
     <dependency>
       <groupId>org.slf4j</groupId>
@@ -58,15 +64,33 @@
       <version>1.7.19</version>
     </dependency>
     <dependency>
-      <groupId>org.bukkit</groupId>
-      <artifactId>bukkit</artifactId>
-      <version>1.9-R0.1-SNAPSHOT</version>
+      <groupId>ru.atisot</groupId>
+      <artifactId>kcauldron-srg</artifactId>
+      <version>1.7.10-custom-3</version>
       <scope>provided</scope>
     </dependency>
     <dependency>
       <groupId>org.fusesource.jansi</groupId>
       <artifactId>jansi</artifactId>
       <version>1.11</version>
+      <scope>provided</scope>
+    </dependency>
+    <dependency>
+      <groupId>com.evilmidget38</groupId>
+      <artifactId>bukkit-guice</artifactId>
+      <version>1.0.2</version>
+      <scope>provided</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.yaml</groupId>
+      <artifactId>snakeyaml</artifactId>
+      <version>1.9</version>
+      <scope>provided</scope>
+    </dependency>
+    <dependency>
+      <groupId>commons-lang</groupId>
+      <artifactId>commons-lang</artifactId>
+      <version>2.6</version>
       <scope>provided</scope>
     </dependency>
   </dependencies>
