--- a/pom.xml
+++ b/pom.xml
@@ -61,7 +61,7 @@
     <dependency>
       <groupId>org.slf4j</groupId>
       <artifactId>slf4j-api</artifactId>
-      <version>1.7.12</version>
+      <version>1.7.19</version>
     </dependency>
     <dependency>
       <groupId>ru.atisot</groupId>
@@ -76,12 +76,6 @@
       <scope>provided</scope>
     </dependency>
     <dependency>
-      <groupId>com.evilmidget38</groupId>
-      <artifactId>bukkit-guice</artifactId>
-      <version>1.0.3</version>
-      <scope>provided</scope>
-    </dependency>
-    <dependency>
       <groupId>org.yaml</groupId>
       <artifactId>snakeyaml</artifactId>
       <version>1.9</version>
@@ -91,6 +85,12 @@
       <groupId>commons-lang</groupId>
       <artifactId>commons-lang</artifactId>
       <version>2.6</version>
+      <scope>provided</scope>
+    </dependency>
+    <dependency>
+      <groupId>com.google.guava</groupId>
+      <artifactId>guava</artifactId>
+      <version>14.0.1</version>
       <scope>provided</scope>
     </dependency>
   </dependencies>
