- Removed local repo link - Fixed dependencies

--- a/pom.xml
+++ b/pom.xml
@@ -51,12 +51,6 @@
     </license>
   </licenses>
   <!-- Dependencies -->
-  <repositories>
-    <repository>
-      <id>atisot_maven</id>
-      <url>file://${project.basedir}/../Maven</url>
-    </repository>
-  </repositories>
   <dependencies>
     <dependency>
       <groupId>org.slf4j</groupId>
@@ -64,9 +58,9 @@
       <version>1.7.19</version>
     </dependency>
     <dependency>
-      <groupId>ru.atisot</groupId>
-      <artifactId>kcauldron-srg</artifactId>
-      <version>1.7.10-custom-3</version>
+      <groupId>ru.atisot.mods</groupId>
+      <artifactId>kcauldron</artifactId>
+      <version>1.7.10-srg</version>
       <scope>provided</scope>
     </dependency>
     <dependency>
